--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                             </button>
                             <div class="accordion-content pb-2">
                                 <ul class="list-none mt-2 space-y-2 text-sm pl-2">
-                                    <li>Available drums: <code class="font-mono bg-gray-700 px-1 rounded-sm">kick</code>, <code class="font-mono bg-gray-700 px-1 rounded-sm">snare</code>, <code class="font-mono bg-gray-700 px-1 rounded-sm">hihat</code>, <code class="font-mono bg-gray-700 px-1 rounded-sm">tom</code>.</li>
+                                    <li>Available drums: <code class="font-mono bg-gray-700 px-1 rounded-sm">kick</code>, <code class="font-mono bg-gray-700 px-1 rounded-sm">hihat</code>, <code class="font-mono bg-gray-700 px-1 rounded-sm">tom</code>.</li>
                                     <li><code class="font-mono bg-gray-700 px-1 rounded-sm">1-9</code> : Hit with velocity (1=soft, 9=hard).</li>
                                     <li><code class="font-mono bg-gray-700 px-1 rounded-sm">-</code> or <code class="font-mono bg-gray-700 px-1 rounded-sm">.</code> : Rest (silence).</li>
                                     <li><code class="font-mono bg-gray-700 px-1 rounded-sm">C4:8</code>: Plays note C4 as an 8th note.</li>
