--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="lg:col-span-2 flex flex-col gap-6 w-full h-full">
             <header class="animated-entry" style="animation-delay: 100ms;">
                 <h1 class="text-4xl font-bold text-white tracking-tight">Code<span class="text-indigo-400">Beat</span></h1>
-                <p class="text-gray-400 mt-1">Craft generative rhythms with code.</p>
+                <p class="text-gray-400 mt-1">Craft generative rhythms with code. (BETA)</p>
             </header>
             
             <!-- Instructions -->
@@ -226,10 +226,10 @@
                 this.playIconSVG = this.elements.playIcon.innerHTML;
 
                 this.presets = {
-                    funk: `-- Modern Funk --\n-- Instruments: kick, snare, hihat, tom, synth, bass --\n\nkick: 9-.7-..7.9-7.7..\nsnare:....9...----9...\nhihat:*-*-*-*-*-*-*-*-\ntom: ..............o.\nsynth:C4:16-.G4:16-.A#4:16-C5:16-\nbass: C2---G2---A#2--C3---`,
-                    trap: `-- Trap Beat --\n\nkick: 9---7---9-7-9---\nsnare:----9-------9---\nhihat:*-*-*-*?*-*-*-*?*-\nsynth:G4:8--F4:8--D#4:8--C4:8\nbass: G1:4----G1:4----`,
-                    generative: `-- Generative Melody --\n\nkick: 9--5?3--9--5?8--\nsnare:----9?6-------9?4-\nhihat:*-*?*-*?*-*?*-*?*-\nsynth:(C4|D4|E4|G4|A4)--(C4|D4|E4|G4|A4)--(C4|D4|E4|G4|A4)--(C4|D4|E4|G4|A4)-\nbass: C2:2------G1:2------`,
-                    house: `-- House Groove --\n\nkick: 9-5-9-5-9-5-9-5\nsnare:----9-------9---\nhihat:--7---7---7---7-\nsynth:C3-E3-G3-B3-C4-B3-G3-E3\nbass: C2:16-C2:16-C2:16-C2:16-C2:16-C2:16-C2:16-C2:16`,
+                    funk: `-- Modern Funk --\n-- Instruments: kick, hihat, tom, synth, bass --\n\nkick: 9-.7-..7.9-7.7..\nhihat:*-*-*-*-*-*-*-*-\ntom: ..............o.\nsynth:C4:16-.G4:16-.A#4:16-C5:16-\nbass: C2---G2---A#2--C3---`,
+                    trap: `-- Trap Beat --\n\nkick: 9---7---9-7-9---\nhihat:*-*-*-*?*-*-*-*?*-\nsynth:G4:8--F4:8--D#4:8--C4:8\nbass: G1:4----G1:4----`,
+                    generative: `-- Generative Melody --\n\nkick: 9--5?3--9--5?8--\nhihat:*-*?*-*?*-*?*-*?*-\nsynth:(C4|D4|E4|G4|A4)--(C4|D4|E4|G4|A4)--(C4|D4|E4|G4|A4)--(C4|D4|E4|G4|A4)-\nbass: C2:2------G1:2------`,
+                    house: `-- House Groove --\n\nkick: 9-5-9-5-9-5-9-5\nhihat:--7---7---7---7-\nsynth:C3-E3-G3-B3-C4-B3-G3-E3\nbass: C2:16-C2:16-C2:16-C2:16-C2:16-C2:16-C2:16-C2:16`,
                 };
                 
                 this.init();
